--- a/FinancialAdvisorAppUI/Shared/MainLayout.razor
+++ b/FinancialAdvisorAppUI/Shared/MainLayout.razor
@@ -1,15 +1,23 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="sidebar">
-    <NavMenu />
-</div>
+<BlazoredToasts />
 
-<div class="main">
-    <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+
+<div class="page">
+    <div class="sidebar">
+        <NavMenu />
     </div>
+    <div class="main">
+        <div class="top-row px-4">
+            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        </div>
+        <div class="content px-4 mt-6">
+            <div class="card">
+                <div class="card-body">
+                    @Body
+                </div>
+            </div>
+        </div>
 
-    <div class="content px-4">
-        @Body
     </div>
 </div>
