--- a/FinancialAdvisorAppUI/Pages/Index.razor
+++ b/FinancialAdvisorAppUI/Pages/Index.razor
@@ -23,6 +23,19 @@
     Website: <a href="http://bit.ly/2ux9hcn">Trevoir Williams | Blog</a>
 </p>
 
+<button @onclick="getuserdetails" class="btn btn-outline-secondary">
+    <span class="oi oi-media-skip-backward"></span>
+    generate hello world
+</button>
+
+@code{
+    private void getuserdetails()
+    {
+
+    }
+
+}
+
 
 
 
