--- a/FinancialAdvisorAppUI/_Imports.razor
+++ b/FinancialAdvisorAppUI/_Imports.razor
@@ -1,7 +1,5 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -10,9 +8,12 @@
 @using Microsoft.JSInterop
 @using FinancialAdvisorAppUI
 @using FinancialAdvisorAppUI.Shared
-@using FinancialAdvisorAppUI.Contracts
-@using FinancialAdvisorAppUI.Models
-@using FinancialAdvisorAppUI.Static
 @using Blazored.Toast
 @using Blazored.Toast.Services
 @using System.IO
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using FinancialAdvisorAppUI.Shared
+@using FinancialAdvisorAppUI.Contracts
+@using FinancialAdvisorAppUI.Models
+@using FinancialAdvisorAppUI.Static
