--- a/FinancialAdvisorAppUI/_Imports.razor
+++ b/FinancialAdvisorAppUI/_Imports.razor
@@ -13,7 +13,11 @@
 @using System.IO
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
-@using FinancialAdvisorAppUI.Shared
 @using FinancialAdvisorAppUI.Contracts
+@using FinancialAdvisorAppUI.Contracts.Users
+@using FinancialAdvisorAppUI.Contracts.Ref
 @using FinancialAdvisorAppUI.Models
+@using FinancialAdvisorAppUI.Models.Ref
+@using FinancialAdvisorAppUI.Models.Users
 @using FinancialAdvisorAppUI.Static
+@using FinancialAdvisorAppUI.Providers
