--- a/FinancialAdvisorAppUI/Pages/Authors/Delete.razor
+++ b/FinancialAdvisorAppUI/Pages/Authors/Delete.razor
@@ -82,12 +82,12 @@ else
     protected override async Task OnInitializedAsync()
     {
         int id = Convert.ToInt32(Id);
-        Model = await _repo.Get(Endpoints.AuthorsEndpoint, id);
+        Model = await _repo.GetById(Endpoints.AuthorsEndpoint, id.ToString());
     }
 
     private async Task DeleteAuthor()
     {
-        isSuccess = await _repo.Delete(Endpoints.AuthorsEndpoint, Model.Id);
+        isSuccess = await _repo.Delete(Endpoints.AuthorsEndpoint, Model.Id.ToString());
         if (isSuccess)
         {
             _toastService.ShowError("Author Deleted Successfully", "");
