--- a/FinancialAdvisorAppUI/Pages/Authors/Edit.razor
+++ b/FinancialAdvisorAppUI/Pages/Authors/Edit.razor
@@ -56,13 +56,13 @@ else
     private bool isSuccess = true;
     protected override async Task OnInitializedAsync()
     {
-        int id = Convert.ToInt32(Id);
-        Model = await _repo.Get(Endpoints.AuthorsEndpoint, id);
+
+        Model = await _repo.GetById(Endpoints.AuthorsEndpoint, Id);
     }
 
     private async Task EditAuthor()
     {
-        isSuccess = await _repo.Update(Endpoints.AuthorsEndpoint, Model, Model.Id);
+        isSuccess = await _repo.Update(Endpoints.AuthorsEndpoint, Model, Id);
         if (isSuccess)
         {
             _toastService.ShowWarning("Author Updated Successfully", "");
