--- a/FinancialAdvisorAppUI/Pages/Authors/View.razor
+++ b/FinancialAdvisorAppUI/Pages/Authors/View.razor
@@ -80,7 +80,7 @@ else
     protected override async Task OnInitializedAsync()
     {
         int id = Convert.ToInt32(Id);
-        Model = await _repo.Get(Endpoints.AuthorsEndpoint, id);
+        Model = await _repo.GetById(Endpoints.AuthorsEndpoint, Id);
         _toastService.ShowInfo($"Now Viewing {Model.Firstname} {Model.Lastname}", "");
     }
 
