--- a/FinancialAdvisorAppUI/Pages/Books/View.razor
+++ b/FinancialAdvisorAppUI/Pages/Books/View.razor
@@ -91,8 +91,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        int id = Convert.ToInt32(Id);
-        Model = await _repo.Get(Endpoints.BooksEndpoint, id);
+        Model = await _repo.GetById(Endpoints.BooksEndpoint, Id);
         _toastService.ShowInfo($"Now Viewing {Model.Title}", "");
 
     }
