--- a/FinancialAdvisorAppUI/Shared/NavMenu.razor
+++ b/FinancialAdvisorAppUI/Shared/NavMenu.razor
@@ -1,8 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity;
-@using Microsoft.Extensions.Configuration;
-@using Microsoft.IdentityModel.Tokens;
-
-<div class="top-row pl-4 navbar navbar-dark">
+﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">BookStore-UI</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -15,7 +11,12 @@
             <Authorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link">
-                        <span class="oi oi-person" aria-hidden="true"></span> @context.User.FindFirst(AppConstants.UserId).Value
+                        <span class="oi oi-person" aria-hidden="true"></span> @context.User.Identity.Name
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="goals">
+                        <span class="oi oi-person" aria-hidden="true"></span> Set up goals
                     </NavLink>
                 </li>
 
