Setting up post of user details

--- a/FinancialAdvisorAppUI/Pages/Authors/Index.razor
+++ b/FinancialAdvisorAppUI/Pages/Authors/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/authors/"
+@inject NavigationManager _navManager
 
 @inject IAuthorRepository _repo
 @*@inject HttpClient _client*@
@@ -66,5 +67,10 @@ else
     {
         Model = await _repo.Get(Endpoints.AuthorsEndpoint);
         //Model = await _client.GetFromJsonAsync<IList<Author>>(Endpoints.AuthorsEndpoint);
+    }
+
+    private void createGoals()
+    {
+        _navManager.NavigateTo("/authors/");
     }
 }
