--- a/FinancialAdvisorAppUI/Pages/Index.razor
+++ b/FinancialAdvisorAppUI/Pages/Index.razor
@@ -1,38 +1,17 @@
 ﻿@page "/"
 
 
-<h1 class="card-title">BookStore-API</h1>
+<h1 class="card-title">Financial Goals Helper</h1>
 <p class="card-body">
-    ASP.NET Core 3.1 Book Store Web API for educational purposes.
-    By doing this course, you would have:
-    <ul>
-        <li>Build a fully data driven REST Web API with Core 3.1 using cutting edge technology</li>
-        <li>Connect to a Database using Entity Framework Core</li>
-        <li>Repository Pattern and Dependency Injection</li>
-        <li>Setup Logging using NLog</li>
-        <li>Understand the REST design principles</li>
-        <li>Understand C# and .Net Core Web Syntax</li>
-        <li>Understand user Authentication using JWT (JSON Web Tokens)</li>
-        <li>Understand how to use Models, DTOs and AutoMapper</li>
-        <li>Manage Packages with NuGet Manager</li>
-        <li>Setup GitHub for Source Control</li>
-        <li>Setup a Microsoft Azure Account</li>
-        <li>Build Web Application to interact with Web API</li>
-        <li>Deploy API and Database to Azure Web and Database Services</li>
-    </ul>
-    Website: <a href="http://bit.ly/2ux9hcn">Trevoir Williams | Blog</a>
+    This application is designed to help you create and track your progress towards your financial goals.
+    <br />
+    <br />
+    
+
+    <a href="https://github.com/stevewb1993/FinancialAdvisorApp" target="_blank">Source Code</a>
 </p>
 
-<button @onclick="getuserdetails" class="btn btn-outline-secondary">
-    <span class="oi oi-media-skip-backward"></span>
-    generate hello world
-</button>
-
 @code{
-    private void getuserdetails()
-    {
-
-    }
 
 }
 
