--- a/FinancialAdvisorAppUI/Shared/NavMenu.razor
+++ b/FinancialAdvisorAppUI/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">BookStore-UI</a>
+    <a class="navbar-brand" href="">Financial Goal Helper</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,6 +7,11 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Home
+            </NavLink>
+        </li>
         <AuthorizeView>
             <Authorized>
                 <li class="nav-item px-3">
@@ -16,7 +21,12 @@
                 </li>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="goals">
-                        <span class="oi oi-person" aria-hidden="true"></span> Set up goals
+                        <span class="oi oi-person" aria-hidden="true"></span> Update details
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="financialstats">
+                        <span class="oi oi-arrow-right" aria-hidden="true"></span> Financial Stats
                     </NavLink>
                 </li>
 
@@ -40,12 +50,8 @@
                 </li>
             </NotAuthorized>
         </AuthorizeView>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
+
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="authors/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Authors
             </NavLink>
@@ -54,21 +60,7 @@
             <NavLink class="nav-link" href="books/">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Books
             </NavLink>
-        </li>
-        <AuthorizeView Roles="Administrator">
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="books">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> ADMIN LINK
-                </NavLink>
-            </li>
-        </AuthorizeView>
-        <AuthorizeView Roles="Customer">
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="books">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> CUSTOMER LINK
-                </NavLink>
-            </li>
-        </AuthorizeView>
+        </li>*@
     </ul>
 </div>
 
