--- a/FinancialAdvisorAppUI/Pages/FinancialStats/Create.razor
+++ b/FinancialAdvisorAppUI/Pages/FinancialStats/Create.razor
@@ -29,7 +29,7 @@
 }
 else
 {
-    <h6>@financeDateModel.financeDate.ToString("dd MMMM yyyy")</h6>
+    @*<h6>@financeDateModel.financeDate.ToString("dd MMMM yyyy")</h6>
     <br />
     foreach (FinanceType financeType in financeTypes)
     {
@@ -49,6 +49,29 @@ else
             </button>
         </EditForm>
         <br />
+    }*@
+
+
+    <h6>@financeDateModel.financeDate.ToString("dd MMMM yyyy")</h6>
+    <br />
+    for (int i = 0; i < financialStatModelList.Count; i++)
+    {
+
+
+        <EditForm Model="financialStatModelList[i]" OnValidSubmit="returnVoid">
+            <DataAnnotationsValidator />
+            <ValidationSummary />
+            <h5>Value of @financeTypes[i].FinanceDesc</h5>
+            <div class="form-group">
+                <label for="FinanceValue">Value</label>
+                <InputNumber @bind-Value="financialStatModelList[i].FinanceValue" class="form-control" id="FinanceValue" />
+            </div>
+            <button class="btn btn-primary" type="submit">
+                <span class="oi oi-pencil"></span>
+                Update Details
+            </button>
+        </EditForm>
+        <br />
     }
 }
 
@@ -59,6 +82,7 @@ else
     private FinanceDate financeDateModel = new FinanceDate();
     private string userId;
     private IList<FinanceType> financeTypes;
+    private IList<FinancialStat> financialStatModelList;
 
     private bool isExistsFinancialStats;
 
@@ -75,9 +99,11 @@ else
 
         financeTypes = await _financeTypeRepo.Get(Endpoints.FinanceTypesEndpoint);
 
+
+
         isExistsFinancialStats = await _financialStatRepo.CheckUserHasRecords(Endpoints.FinancialStatsEndpoint, userId);
 
-        if(isExistsFinancialStats)
+        if (isExistsFinancialStats)
         {
             userFinancialStats = await _financialStatRepo.GetByUserId(Endpoints.FinancialStatsEndpoint, userId);
         }
@@ -104,7 +130,42 @@ else
                 userFinancialStats.Add(financialStatToSubmit);
             }
         }
-        if(!isExistsPreviousRecord) //no previous entry, create new guid and submit post request
+        if (!isExistsPreviousRecord) //no previous entry, create new guid and submit post request
+        {
+            Guid newRecordGuid = Guid.NewGuid();
+            financialStatToSubmit = new FinancialStat(financeDateModel.financeDate, financeTypeId, financeValue, userId, newRecordGuid.ToString());
+            isSuccess = await _financialStatRepo.Create(Endpoints.FinancialStatsEndpoint, financialStatToSubmit);
+            userFinancialStats.Add(financialStatToSubmit);
+            isExistsFinancialStats = true;
+        }
+
+
+        if (isSuccess) _toastService.ShowSuccess("Details submitted successfully", "");
+        else _toastService.ShowError("Something went wrong");
+
+    }
+
+    private async void CreateFinancialStat()
+    {
+        bool isSuccess = false;
+        bool isExistsPreviousRecord = false;
+
+        FinancialStat financialStatToSubmit;
+
+        if (isExistsFinancialStats)
+        {
+            var previousRecords = userFinancialStats.Where(x => x.FinanceDate == financeDateModel.financeDate & x.FinanceTypeId == financeTypeId).ToList();
+            isExistsPreviousRecord = previousRecords.Count > 0;
+            if (isExistsPreviousRecord) //record already exists. take existing request and submit put request
+            {
+                string existingGuid = previousRecords.First().Id;
+                financialStatToSubmit = new FinancialStat(financeDateModel.financeDate, financeTypeId, financeValue, userId, existingGuid);
+                isSuccess = await _financialStatRepo.Update(Endpoints.FinancialStatsEndpoint, financialStatToSubmit, existingGuid);
+                userFinancialStats.Remove(previousRecords.First());
+                userFinancialStats.Add(financialStatToSubmit);
+            }
+        }
+        if (!isExistsPreviousRecord) //no previous entry, create new guid and submit post request
         {
             Guid newRecordGuid = Guid.NewGuid();
             financialStatToSubmit = new FinancialStat(financeDateModel.financeDate, financeTypeId, financeValue, userId, newRecordGuid.ToString());
@@ -128,6 +189,11 @@ else
     private void ConfirmDate()
     {
         isDateSelected = true;
+        foreach (FinanceType financeType in financeTypes)
+        {
+            financialStatModelList.Add(new FinancialStat(financeDateModel.financeDate, financeType.Id));
+
+        }
     }
 
     public class FinanceDate
