--- a/FinancialAdvisorAppUI/Pages/FinancialStats/Create.razor
+++ b/FinancialAdvisorAppUI/Pages/FinancialStats/Create.razor
@@ -29,50 +29,59 @@
 }
 else
 {
-    @*<h6>@financeDateModel.financeDate.ToString("dd MMMM yyyy")</h6>
-    <br />
-    foreach (FinanceType financeType in financeTypes)
+
+
+    for (int i = 0; i < 10; i++)
     {
-        FinancialStat financialStatModel = new FinancialStat();
-
-        <EditForm Model="financialStatModel" OnValidSubmit="returnVoid">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
-            <h5>Value of @financeType.FinanceDesc</h5>
-            <div class="form-group">
-                <label for="FinanceValue">Value</label>
-                <InputNumber @bind-Value="financialStatModel.FinanceValue" class="form-control" id="FinanceValue" />
-            </div>
-            <button class="btn btn-primary" type="submit" @onclick="() => CreateFinancialStat(financialStatModel.FinanceValue, financeType.Id)">
-                <span class="oi oi-pencil"></span>
-                Update Details
-            </button>
-        </EditForm>
-        <br />
-    }*@
-
-
-    <h6>@financeDateModel.financeDate.ToString("dd MMMM yyyy")</h6>
-    <br />
-    for (int i = 0; i < financialStatModelList.Count; i++)
-    {
+        <p>@financialStatModelList[i].FinanceType.FinanceDesc</p>
 
 
         <EditForm Model="financialStatModelList[i]" OnValidSubmit="returnVoid">
             <DataAnnotationsValidator />
             <ValidationSummary />
-            <h5>Value of @financeTypes[i].FinanceDesc</h5>
+            <h5>Value of @financialStatModelList[i].FinanceType.FinanceDesc</h5>
             <div class="form-group">
                 <label for="FinanceValue">Value</label>
-                <InputNumber @bind-Value="financialStatModelList[i].FinanceValue" class="form-control" id="FinanceValue" />
+                <InputDate @bind-Value="financialStatModelList[i].FinanceValue" class="form-control" id="FinanceValue" />
             </div>
             <button class="btn btn-primary" type="submit">
                 <span class="oi oi-pencil"></span>
                 Update Details
             </button>
         </EditForm>
-        <br />
+
+
     }
+
+    @*<h6>@financeDateModel.financeDate.ToString("dd MMMM yyyy")</h6>
+    <br />
+    for (int i = 0; i < 11; i++)
+    {
+        Console.WriteLine(i);
+        Console.WriteLine(financialStatModelList[i].FinanceType.FinanceDesc);
+        try
+        {
+            <EditForm Model="financialStatModelList[i]" OnValidSubmit="returnVoid">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+                <h5>Value of @financialStatModelList[i].FinanceType.FinanceDesc</h5>
+                <div class="form-group">
+                    <label for="FinanceValue">Value</label>
+                    <InputNumber @bind-Value="financialStatModelList[i].FinanceValue" class="form-control" id="FinanceValue" />
+                </div>
+                <button class="btn btn-primary" type="submit" @onclick="() => CreateFinancialStat(financialStatModelList[i].FinanceValue, financialStatModelList[i].FinanceTypeId)">
+                    <span class="oi oi-pencil"></span>
+                    Update Details
+                </button>
+            </EditForm>
+            <br />
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine(e.Message);
+        }
+
+    }*@
 }
 
 
@@ -81,14 +90,14 @@ else
 
     private FinanceDate financeDateModel = new FinanceDate();
     private string userId;
-    private IList<FinanceType> financeTypes;
-    private IList<FinancialStat> financialStatModelList;
+    private List<FinanceType> financeTypes = new List<FinanceType>();
+    private List<FinancialStat> financialStatModelList = new List<FinancialStat>();
 
     private bool isExistsFinancialStats;
 
     private bool isDateSelected = false;
 
-    private IList<FinancialStat> userFinancialStats = new List<FinancialStat>();
+    private List<FinancialStat> userFinancialStats = new List<FinancialStat>();
 
 
     protected async override Task OnInitializedAsync()
@@ -97,7 +106,7 @@ else
         var auth = await _authentication.GetAuthenticationStateAsync();
         userId = auth.User.FindFirst(AppConstants.UserId).Value;
 
-        financeTypes = await _financeTypeRepo.Get(Endpoints.FinanceTypesEndpoint);
+        financeTypes = await _financeTypeRepo.Get(Endpoints.FinanceTypesEndpoint) as List<FinanceType>;
 
 
 
@@ -105,7 +114,7 @@ else
 
         if (isExistsFinancialStats)
         {
-            userFinancialStats = await _financialStatRepo.GetByUserId(Endpoints.FinancialStatsEndpoint, userId);
+            userFinancialStats = await _financialStatRepo.GetByUserId(Endpoints.FinancialStatsEndpoint, userId) as List<FinancialStat>;
         }
     }
 
@@ -145,40 +154,7 @@ else
 
     }
 
-    private async void CreateFinancialStat()
-    {
-        bool isSuccess = false;
-        bool isExistsPreviousRecord = false;
 
-        FinancialStat financialStatToSubmit;
-
-        if (isExistsFinancialStats)
-        {
-            var previousRecords = userFinancialStats.Where(x => x.FinanceDate == financeDateModel.financeDate & x.FinanceTypeId == financeTypeId).ToList();
-            isExistsPreviousRecord = previousRecords.Count > 0;
-            if (isExistsPreviousRecord) //record already exists. take existing request and submit put request
-            {
-                string existingGuid = previousRecords.First().Id;
-                financialStatToSubmit = new FinancialStat(financeDateModel.financeDate, financeTypeId, financeValue, userId, existingGuid);
-                isSuccess = await _financialStatRepo.Update(Endpoints.FinancialStatsEndpoint, financialStatToSubmit, existingGuid);
-                userFinancialStats.Remove(previousRecords.First());
-                userFinancialStats.Add(financialStatToSubmit);
-            }
-        }
-        if (!isExistsPreviousRecord) //no previous entry, create new guid and submit post request
-        {
-            Guid newRecordGuid = Guid.NewGuid();
-            financialStatToSubmit = new FinancialStat(financeDateModel.financeDate, financeTypeId, financeValue, userId, newRecordGuid.ToString());
-            isSuccess = await _financialStatRepo.Create(Endpoints.FinancialStatsEndpoint, financialStatToSubmit);
-            userFinancialStats.Add(financialStatToSubmit);
-            isExistsFinancialStats = true;
-        }
-
-
-        if (isSuccess) _toastService.ShowSuccess("Details submitted successfully", "");
-        else _toastService.ShowError("Something went wrong");
-
-    }
 
     private async void returnVoid()
     {
@@ -186,19 +162,30 @@ else
     }
 
 
-    private void ConfirmDate()
+    private async void ConfirmDate()
     {
-        isDateSelected = true;
+        //if(financeTypes.Count < 10) Thread.sleep
+        Console.WriteLine("creating models");
         foreach (FinanceType financeType in financeTypes)
         {
-            financialStatModelList.Add(new FinancialStat(financeDateModel.financeDate, financeType.Id));
+
+            financialStatModelList.Add(new FinancialStat(financeDateModel.financeDate, financeType.Id, financeType));
+            Console.WriteLine(financeType.FinanceDesc);
 
         }
+        Console.WriteLine("completed creating models");
+        isDateSelected = true;
     }
 
     public class FinanceDate
     {
         public DateTime financeDate { get; set; }
+    }
+
+
+    public class FinanceStatsFullModel
+    {
+        public List<FinancialStat>;
     }
 
 }
