--- a/FinancialAdvisorAppUI/_Imports.razor
+++ b/FinancialAdvisorAppUI/_Imports.razor
@@ -13,6 +13,8 @@
 @using System.IO
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+@using Radzen
+@using Radzen.Blazor
 @using FinancialAdvisorAppUI.Contracts
 @using FinancialAdvisorAppUI.Contracts.Users
 @using FinancialAdvisorAppUI.Contracts.Ref
@@ -21,3 +23,4 @@
 @using FinancialAdvisorAppUI.Models.Users
 @using FinancialAdvisorAppUI.Static
 @using FinancialAdvisorAppUI.Providers
+@using FinancialAdvisorAppUI.UICommonFunctions
