--- a/FinancialAdvisorAppUI/Pages/Goals/Index.razor
+++ b/FinancialAdvisorAppUI/Pages/Goals/Index.razor
@@ -2,6 +2,7 @@
 
 @inject NavigationManager _navManager
 @inject IGoalRepository _goalRepo
+@inject IFinancialStatRepository _finStatRepo
 @inject IUserDetailRepository _userDetailRepo
 @inject HttpClient _client
 @inject ApiAuthenticationStateProvider _authentication
@@ -10,25 +11,60 @@
 <hr />
 <br />
 
-@if (!isExistsUserDetails || !isExistsGoals)
+@if (!isExistsUserDetails)
 {
     <div>
         Please provide some additional information about yourself so we can create suitable goals for you
     </div>
-    <button @onclick="createGoals" class="btn btn-outline-secondary">
+
+
+    <button class="btn btn-outline-secondary" @onclick="@(e => _navManager.NavigateTo(linkUserDetails))">
         <span class="oi oi-fork"></span>
-        Set up goals
+        Update user details
     </button>
 }
+
+@if (!isExistsFinancialStats)
+{
+    <div>
+        Please provide some additional information about your finances so we can create suitable goals for you
+    </div>
+    <button class="btn btn-outline-secondary" @onclick="@(e => _navManager.NavigateTo(linkUpdateFinStats))">
+        <span class="oi oi-fork"></span>
+        Update financial stats
+    </button>
+}
+
+@if (isExistsUserDetails & isExistsFinancialStats)
+{
+    <button class="btn btn-outline-secondary">
+        <span class="oi oi-fork"></span>
+        Update your goals!
+    </button>
+}
+
+@if(isExistsGoals)
+{
+    <p>Placeholder for goals dashboard</p>
+}
+else
+{
+    <p>You haven't set up any goals yet!</p>
+}
+
 
 
 
 @code { 
     private IList<Goal> goalModel;
+
     private UserDetail userDetailModel;
 
     private bool isExistsUserDetails;
     private bool isExistsGoals;
+    private bool isExistsFinancialStats;
+    private string linkUserDetails = "/userdetails/";
+    private string linkUpdateFinStats = "/financialstats/create/";
 
 
 
@@ -47,14 +83,11 @@
         isExistsGoals = await _goalRepo.CheckUserHasRecords(Endpoints.GoalsEndpoint, userId);
         Console.WriteLine(isExistsGoals);
 
-        //goalModel = await _goalRepo.GetByUserId(Endpoints.GoalsEndpoint, userId);
+        //Check goals
+        isExistsFinancialStats = await _finStatRepo.CheckUserHasRecords(Endpoints.FinancialStatsEndpoint, userId);
+        Console.WriteLine(isExistsFinancialStats);
 
-        //userDetailModel = await _userDetailRepo.GetById(Endpoints.UserDetailsEndpoint, userId);
 
-    }
 
-    private void createGoals()
-    {
-        _navManager.NavigateTo("/goals/create");
     }
 }
