--- a/FinancialAdvisorAppUI/Shared/NavMenu.razor
+++ b/FinancialAdvisorAppUI/Shared/NavMenu.razor
@@ -15,36 +15,36 @@
         <AuthorizeView>
             <Authorized>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link">
+                    <NavLink class="nav-link" href="@AppConstants.LinkUserDetails">
                         <span class="oi oi-person" aria-hidden="true"></span> @context.User.Identity.Name
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="goals">
-                        <span class="oi oi-person" aria-hidden="true"></span> Update details
+                    <NavLink class="nav-link" href="@AppConstants.LinkGoals">
+                        <span class="oi oi-person" aria-hidden="true"></span> Goals
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="financialstats">
-                        <span class="oi oi-arrow-right" aria-hidden="true"></span> Financial Stats
+                    <NavLink class="nav-link" href="@AppConstants.LinkFinanceTracking">
+                        <span class="oi oi-arrow-right" aria-hidden="true"></span> Finance Tracking
                     </NavLink>
                 </li>
 
 
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="logout">
+                    <NavLink class="nav-link" href="@AppConstants.LinkLogout">
                         <span class="oi oi-arrow-circle-left" aria-hidden="true"></span> Log Out
                     </NavLink>
                 </li>
             </Authorized>
             <NotAuthorized>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="login">
+                    <NavLink class="nav-link" href="@AppConstants.LinkLogin">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Login
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="register">
+                    <NavLink class="nav-link" href="@AppConstants.LinkRegister">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Register
                     </NavLink>
                 </li>
